# medha

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REVIEW.md  SPEC.md  electron-builder.yml  justfile  package-lock.json  package.json
.Jules/: palette.md
.agents/: napkin.md
.claude/commands/: context-load.md  medha-status.md  pre-commit-check.md  security-audit.md
.github/workflows/: ci.yml  release.yml
backend/: medha.spec  pyproject.toml
backend/agents/: deep.yaml  default.yaml  fast.yaml
backend/app/: __main__.py  db.py  main.py  workspace.py  workspace_store.py
backend/app/ai/: agent.py  inline.py  tools.py
backend/app/routers/: ai.py  chats.py  db.py  events.py  history.py  models.py  queries.py  workspace.py
backend/tests/: benchmark_blocking.py  conftest.py  test_agent_ui_blocking.py  test_agent_yaml.py  test_ai_agent.py  test_ai_cancel.py  test_ai_tools.py  test_arrow.py  test_boot.py  test_chats.py  test_db.py  test_db_concurrency.py  test_db_lock_contention.py  test_export.py  test_health.py  test_history.py  test_hitl.py  test_meta_config.py  test_phase7_bugs.py  test_queries.py  test_settings.py  test_slug_generation.py  test_workspace.py  test_workspace_store.py
docs/: AUDIT.md  INDEX.md  screenshot-placeholder.md
docs/decisions/: ADR-001-svg-logo.md  (+4 more)
electron/: ipc-handlers.ts  main.ts  port.ts  preload.ts  sidecar.ts  tsconfig.json
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  (+4 more)
scripts/: bump-version.sh  make-icns.sh  setup-homebrew-tap.sh  sign-app.sh
(+42 files in other folders)
