[project]
name = "medha-backend"
version = "0.1.0"
description = "Medha backend - FastAPI + DuckDB + LangGraph"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]",
  "duckdb>=1.2",
  "litellm>=1.55,<1.82",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "watchfiles>=1.0",
  "python-multipart",
  "pandas>=2.2",
  "pyarrow>=17",
  "sqlglot",
  "langchain>=1.2.10",
  "langchain-community>=0.4.1",
  "pyyaml>=6.0.3",
  "langchain-litellm>=0.6.1",
  "python-dotenv>=1.2.2",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
